# django-multi-step-registration

./: .gitignore  AUTHORS  CHANGELOG  LICENSE  README.rst  pyproject.toml  setup.py  tasks.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py
registration/: admin.py  apps.py  auth_urls.py  forms.py  models.py  signals.py  views.py
registration/backends/admin_approval/: __init__.py  urls.py  views.py
registration/backends/default/: urls.py  views.py
registration/backends/simple/: urls.py  views.py
registration/management/commands/: cleanupregistration.py
registration/migrations/: 0001_initial.py  0002_registrationprofile_activated.py  0003_migrate_activatedstatus.py  0004_supervisedregistrationprofile.py  0005_activation_key_sha256.py  0006_alter_registrationprofile_id.py
registration/templates/registration/: activate.html  activation_complete.html  activation_complete_admin_pending.html  activation_email.html  activation_email.txt  activation_email_subject.txt  admin_approve.html  admin_approve_complete.html  admin_approve_complete_email.html  admin_approve_complete_email.txt  admin_approve_complete_email_subject.txt  admin_approve_email.html  admin_approve_email.txt  admin_approve_email_subject.txt  login.html  logout.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  registration_closed.html  registration_complete.html  registration_form.html  resend_activation_complete.html  resend_activation_form.html  signature.html  signature.txt
registration/tests/: test_admin_actions.py  test_admin_approval_backend.py  test_default_backend.py  test_forms.py  test_forms_custom_user.py  test_models.py  test_simple_backend.py  test_urls.py
test_app/: models.py  settings.py  settings_test.py  urls_admin_approval.py  urls_simple.py
test_app/templates/: base.html  index.html  profile.html
