[tool.poetry]
name = "multi-step-registration"
version = "1.0.0"
description = "An extensible multi-step user registration application for Django"
authors = ["Styvane Soukossi <4968379+styvane@users.noreply.github.com>"]
maintainers = ["Styvane Soukossi <4968379+styvane@users.noreply.github.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
keywords = ["django", "registration", "formtools"]
packages = [{include = "registration"}]
exclude = ["test_app"]
repository = "https://github.com/styvane/django-multi-step-registration"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-formtools = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
tox = "^4.6.3"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"
force_single_line = true
forced_separate = "registration"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_app.settings_test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"